kubernetes/manifests/prometheus/03-grafana-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.127.0.0.1.nip.io`)
    kind: Rule
    services:
    # - name: traefik-web-ui
    #   port: 8080
    - name: api@internal
      kind: TraefikService
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: "grafana.127.0.0.1.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 3000
